[package]
name = "poem_openapi_validator_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies.syn]
version = "1.0"
features = ['full']
[dependencies.quote]
version = "1.0"
[dependencies.serde]
version = "1.0"
features = ["derive"]
[dependencies.serde_json]
version = "1.0"
[dependencies.thiserror]
version = "1.0"
[dependencies.poem]
version = "1.2"
features = ["anyhow"]
[dependencies.validator]
version = "0.14"
