[package]
name = "poem_openapi_validator_derive"
version = "0.1.1"
edition = "2021"
authors = ["tingfeng-key <1770963469@qq.com>"]
keywords = ["poem-openapi", "validator"]
exclude = ["target", "Cargo.lock", ".gitignore", ".idea", ".vscode"]
description = "poem openapi validator"
homepage = "https://github.com/tingfeng-key/poem_openapi_validator"
repository = "https://github.com/tingfeng-key/poem_openapi_validator"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies.syn]
version = "1.0"
features = ['full']
[dependencies.quote]
version = "1.0"
[dependencies.validator]
version = "0.14"
